2013-12-12         Arnold D. Robbins     <arnold@skeeve.com>

	* do.outline: New file.

2013-06-27         Arnold D. Robbins     <arnold@skeeve.com>

	* ChangeLog: Created.
	* testdfa.c: Add ifdef around xalloc.h, for use with grep dfa.

2013-06-03         Arnold D. Robbins     <arnold@skeeve.com>

	* testdfa.c: New file.

2013-06-03         Arnold D. Robbins     <arnold@skeeve.com>

	* testnet.awk, testnet.c, fixdump.awk: New files.