@@ -1,3 +1,7 @@
+2013-12-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* testdfa.c: Fix some bugs and compiler warnings.
+
 2013-12-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* do.outline: New file.
